estilizacao-do-site-da-loja

--- a/semana1/sistema-loja/ctrl-estoque.html
+++ b/semana1/sistema-loja/ctrl-estoque.html
@@ -5,22 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Controle de Estoque</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <div>
-        <p>Feminink Tattoo Supply</p>
+    <div class="div-cabecalho">
+        <h1>Bem-vind@ ao <em>Feminink Tattoo Supply</em>!</h1>
+        <p>Somos uma loja especializada em materiais de tatuagem com qualidade à altura da sua arte!</p>
     </div>
     
-    <div>
+    <div class="div-menu">
         <a href="index.html">Página Inicial</a>
         <a href="ctrl-estoque.html">Controle de Estoque</a>
         <a href="add-produto.html">Adicionar Produto</a>
         <a href="funcionarios.html">Funcionários</a>
     </div>
 
-    <h2>Controle de Estoque</h2>
+    <div class="div-conteudo">
+        <h2>Controle de Estoque</h2>
 
-    <table>
+    <table id="tabela-produtos">
         <tr>
             <th>Foto</th>
             <th>Descrição</th>
@@ -65,6 +68,18 @@
         </tr>
 
     </table>
+
+    </div>
+    
+    <div id="div-rodape">
+        <p id="texto-rodape">Siga-nos nas redes sociais!</p>
+
+        <div id="div-redes-sociais">
+            <img class="icones-redes-sociais" src="https://image.flaticon.com/icons/png/512/25/25305.png"/>
+            <img class="icones-redes-sociais" src="https://image.flaticon.com/icons/png/512/25/25425.png"/>
+            <img class="icones-redes-sociais" src="https://image.flaticon.com/icons/png/512/8/8800.png"/>
+        </div>
+    </div>
 
 </body>
 </html>
