adicionei-fotos-de-novos-produtos-e-botao-de-pesquisa

--- a/semana1/sistema-loja/index.html
+++ b/semana1/sistema-loja/index.html
@@ -22,22 +22,24 @@
 
     <div class="div-conteudo">
         <!-- ADICIONAR INFORMAÇOES SOBRE SUA LOJINHA -->
-        <p>Conteúdo da minha loja aqui Conteúdo da minha loja aqui Conteúdo da minha loja aqui 
-        Conteúdo da minha loja aqui Conteúdo da minha loja aqui</p>
+        <form id="form-pesquisa"action="">
+            <input type="search" name="pesquisa" id="input-pesquisa" placeholder="Pesquisar produtos">
+            <input id="button-buscar" type="button" name="pesquisar" value="BUSCAR">
+        </form>
 
         <div>
-            <img class="foto-produtos" src="./img/kit-agulha-biqueira.jpg"/>
-            <img class="foto-produtos" src="./img/luva-nitrilica.jpg"/>
-            <img class="foto-produtos" src="./img/maquina-tattoo.jpg"/>
-            <img class="foto-produtos" src="./img/tinta-tattoo.jpg"/>
-            <img class="foto-produtos" src="./img/pomada-cicatrizante.jpg"/>
-            <img class="foto-produtos" src="./img/maquina-tattoo.jpg"/>
-            <img class="foto-produtos" src="./img/kit-agulha-biqueira.jpg"/>
-            <img class="foto-produtos" src="./img/luva-nitrilica.jpg"/>
-            <img class="foto-produtos" src="./img/maquina-tattoo.jpg"/>
-            <img class="foto-produtos" src="./img/tinta-tattoo.jpg"/>
-            <img class="foto-produtos" src="./img/pomada-cicatrizante.jpg"/>
-            <img class="foto-produtos" src="./img/maquina-tattoo.jpg"/>
+            <img class="foto-produtos" src="./img/kit-agulha-biqueira.jpg" alt="kit de agulha e biqueira para tatuagem">
+            <img class="foto-produtos" src="./img/luva-nitrilica.jpg" alt="luvas nitrilicas para tatuagem"/>
+            <img class="foto-produtos" src="./img/maquina-tattoo.jpg" alt="máquina de tatuagem"/>
+            <img class="foto-produtos" src="./img/tinta-tattoo.jpg" alt="tinta para tatuagem"/>
+            <img class="foto-produtos" src="./img/pomada-cicatrizante.jpg" alt="pomada cicatrizante"/>
+            <img class="foto-produtos" src="./img/fonte-tattoo.jpg" alt="fonte de alimentação para tatuagem"/>
+            <img class="foto-produtos" src="./img/kit-16-tintas-coloridas.jpg"  alt="kit com 16 tintas coloridas"/>
+            <img class="foto-produtos" src="./img/pedal-tattoo.jpg" alt="pedal para máquina de tatuagem"/>
+            <img class="foto-produtos" src="./img/vaselina-tattoo.jpg" alt="vaselina sólida para tatuagem"/>
+            <img class="foto-produtos" src="./img/faceshield.jpg" alt="protetor facial faceshield"/>
+            <img class="foto-produtos" src="./img/mascara-protecao.jpg" alt="kit 5 máscaras de proteção descartáveis"/>
+            <img class="foto-produtos" src="./img/maquina-rotativa.jpg"  alt="máquina rotativa eclipse"/>
         </div>
 
     </div>
