--- a/semana2/bugfixes/comprar.html
+++ b/semana2/bugfixes/comprar.html
@@ -13,7 +13,7 @@
     <h2>For Ever 4</h2>
     <div class="container-do-search">
         <div>
-            <input type="text">
+            <input id="campo-texto" type="text">
             <img src="./img/icon-pesquisa.png" class="icone" alt="Buscar">
         </div>
     </div>
