--- a/semana2/labetube/index.html
+++ b/semana2/labetube/index.html
@@ -19,21 +19,22 @@
         <h3 id="titulo-video-2">Media 2</h3>
         <h3 id="titulo-video-3">Media 3</h3>
         <h3 id="titulo-video-4">Media 4</h3>
-        <a id="video-1" href="video-1.html"><video src="https://storage.googleapis.com/future-apis.appspot.com/1.mp4" controls></video></a>
-        <a id="video-2" href="video-2.html"><video src="https://storage.googleapis.com/future-apis.appspot.com/2.mp4" controls></video></a>
-        <video id="video-3" src="https://storage.googleapis.com/future-apis.appspot.com/3.mp4" controls></video>
-        <video id="video-4" src="https://storage.googleapis.com/future-apis.appspot.com/4.mp4" controls></video>
-        <h3 id="titulo-video-5">Media 5</h3>
-        <h3 id="titulo-video-6">Media 6</h3>
-        <h3 id="titulo-video-7">Media 7</h3>
-        <h3 id="titulo-video-8">Media 8</h3>
-        <video id="video-5" src="https://storage.googleapis.com/future-apis.appspot.com/5.mp4" controls></video>
-        <video id="video-6" src="https://storage.googleapis.com/future-apis.appspot.com/6.mp4" controls></video>
-        <video id="video-7" src="https://storage.googleapis.com/future-apis.appspot.com/7.mp4" controls></video>
-        <video id="video-8" src="https://storage.googleapis.com/future-apis.appspot.com/8.mp4" controls></video>
+        <a id="video-1" href="video-1.html"><video src="https://storage.googleapis.com/future-apis.appspot.com/1.mp4"></video></a>
+        <a id="video-2" href="video-2.html"><video src="https://storage.googleapis.com/future-apis.appspot.com/2.mp4"></video></a>
+        <video id="video-3" src="https://storage.googleapis.com/future-apis.appspot.com/3.mp4"></video>
+        <video id="video-4" src="https://storage.googleapis.com/future-apis.appspot.com/4.mp4"></video>
+        
+        <h3 id="titulo-video-5">Media 5</h3>  
+        <h3 id="titulo-video-6">Media 6</h3> 
+        <h3 id="titulo-video-7">Media 7</h3> 
+        <h3 id="titulo-video-8">Media 8</h3>    
+        <video id="video-5" src="https://storage.googleapis.com/future-apis.appspot.com/5.mp4"></video>
+        <video id="video-6" src="https://storage.googleapis.com/future-apis.appspot.com/6.mp4"></video>
+        <video id="video-7" src="https://storage.googleapis.com/future-apis.appspot.com/7.mp4"></video>
+        <video id="video-8" src="https://storage.googleapis.com/future-apis.appspot.com/8.mp4"></video>
     </main>
     <footer>
-        <p>Eu sou um rodapé</p>
+        <p><i>Página desenvolvida por: Aline "Nyh" Vignoli (:</i></p>
     </footer>
 </body>
 </html>
