site finalizado com responsividade mobile

--- a/semana2/landing-page/index.html
+++ b/semana2/landing-page/index.html
@@ -66,9 +66,9 @@
     </main>
     <footer>
         <ul>
-            <li><a href="https://www.facebook.com" target="_blank">Facebook</a></li>
-            <li><a href="https://www.twitter.com" target="_blank">Twitter</a></li>
-            <li><a href="https://www.instagram.com" target="_blank">Instagram</a></li>
+            <li><a class="redes-sociais" href="https://www.facebook.com" target="_blank">Facebook</a></li>
+            <li><a class="redes-sociais" href="https://www.twitter.com" target="_blank">Twitter</a></li>
+            <li><a class="redes-sociais" href="https://www.instagram.com" target="_blank">Instagram</a></li>
         </ul>
     </footer>
     
