adicionei botao para voltar ao topo e refatorei o codigo

--- a/semana2/landing-page/index.html
+++ b/semana2/landing-page/index.html
@@ -61,6 +61,7 @@
                 <p>A Upfour é uma empresa que fornece crédito para moradores da periferia começarem seu próprio negócio. 
                 Temos o propósito de facilitar o acesso à empréstimos pessoais e empresariais para as camadas sociais menos favorecidas, 
                 pois acreditamos que todos deve ter as mesmas oportunidades para melhorar de vida.</p>
+                <a id="voltar-ao-topo" href="index.html">Voltar ao topo</a>
             </div>
         </article>
     </main>
@@ -71,6 +72,5 @@
             <li><a class="redes-sociais" href="https://www.instagram.com" target="_blank">Instagram</a></li>
         </ul>
     </footer>
-    
 </body>
 </html>
