exercicios concluidos, desafios completos sem responsividade

--- a/semana4/planner/planner/index.html
+++ b/semana4/planner/planner/index.html
@@ -22,8 +22,34 @@
                 <option value="sexta">Sexta-feira</option>
                 <option value="sabado">Sábado</option>
             </select>
+            <select name="horas-dia" id="horas-dia">
+                <option value="0h">0h</option>
+                <option value="1h">1h</option>
+                <option value="2h">2h</option>
+                <option value="3h">3h</option>
+                <option value="4h">4h</option>
+                <option value="5h">5h</option>
+                <option value="6h">6h</option>
+                <option value="7h">7h</option>
+                <option value="8h">8h</option>
+                <option value="9h">9h</option>
+                <option value="10h">10h</option>
+                <option value="11h">11h</option>
+                <option value="12h">12h</option>
+                <option value="13h">13h</option>
+                <option value="14h">14h</option>
+                <option value="15h">15h</option>
+                <option value="16h">16h</option>
+                <option value="17h">17h</option>
+                <option value="18h">18h</option>
+                <option value="19h">19h</option>
+                <option value="20h">20h</option>
+                <option value="21h">21h</option>
+                <option value="22h">22h</option>
+                <option value="23h">23h</option>
+            </select>
         </form>
-
+        
         <button onclick="createTask()">Criar tarefa</button>
 
         <button onclick="clearAll()">Limpar tarefas</button>
