--- a/semana7/labefy/public/index.html
+++ b/semana7/labefy/public/index.html
@@ -24,7 +24,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Overpass:wght@400;600&family=Patua+One&family=Russo+One&family=Squada+One&family=Yanone+Kaffeesatz:wght@300&display=swap" rel="stylesheet">
+    <!-- External fonts-->
+    <title>Labefy</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
